--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -151,6 +151,7 @@ pdfencoding=auto, psdextra
 \def\schon{Sch\"onfinkel}
 \def\nat{\mathbb N}
 \def\pf{\varphi}
+\def\PA{\mathit{PA}}
 
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
@@ -288,8 +289,8 @@ ance of category theory as a working language in many areas of mathematics
 foreshadowed its introduction into logic and foundations. Nevertheless, it
 came as a surprise to many people when, in the 1960's, Lawvere (1969, 1970) and
 one of the present authors [L1] pointed out some remarkable connections between
-category theory and logic. Indeed, after -the discovery of elementary toposes
-by Lawvere and Tierney (1970), the field of "categorical logic" underwent
+category theory and logic. Indeed, after the discovery of elementary toposes
+by Lawvere and Tierney (1970), the field of ``categorical logic'' underwent
 intense development. The reader is referred to the survey article by Kock and
 Reyes (1977) and the monograph by Makkai and Reyes (1977).
 
@@ -376,7 +377,9 @@ arrows and equations:
 
 \paragraph{Arrows:}
 \begin{enumerate}
-\item[(i)] $1_A: A \to A$, $0_A: A \to \one$, $\prAB: A \times B \to A$, $\prpAB: A \times B \to B$, and $\evBA: \fexpBA \to A \times B$ are arrows.
+\item[(i)] $1_A: A \to A$, $0_A: A \to \one$, $\prAB: A \times B \to A$, 
+$\prpAB: A \times B \to B$,
+and $\evBA: \fexpBA \times A \to B$ are arrows.
 
 \item[(ii)] The following rules generate new arrows from old:
 
@@ -420,7 +423,7 @@ arrow formation introducing $f^*$ by another basic arrow
 $\eta_{C,A}: C \to \fexp{(C \times A)}{A}$.
 
 Another view of cartesian closed categories is to consider them as
-{\em deductive systems} [Ll]. Write the objects $\one$, $A \times B$, and $\fexpBA$
+{\em deductive systems} [L1]. Write the objects $\one$, $A \times B$, and $\fexpBA$
 as $\top$, $A \sland B$, and $A \impl B$ respectively. One may then think of an arrow
 $f: A \to B$ as a {\em deduction} of $B$ from $A$ or as a {\em proof}
 of the {\em entailment} $A \ent B$. Proofs may
@@ -433,7 +436,7 @@ proves the commutative law for conjunction, while
 \[
 \inferrule{ }{(A \impl B) \sland A \xto{\evBA} B}
 \]
-may be regarded as an "axiom" (at least in a freely generated deductive system).
+may be regarded as an ``axiom'' (at least in a freely generated deductive system).
 
 Logicians might say that we have presented a system of natural deduction
 for the positive intuitionistic propositional calculus, but with an additional
@@ -447,8 +450,8 @@ relation} between proofs (or proof trees). For example:
 	{C \xto{\pi\la f,g \ra} A }
 \end{aligned} \quad \vbox to .5em{\hbox{\textrm{equals } $C \xto{f} A$}}
 \]
-This notion of ``equivalence of proofs'' is essentially the same as that intro-
-duced by logicians (Prawitz, 1971), as pointed out by Mann (1975).
+This notion of ``equivalence of proofs'' is essentially the same as that
+introduced by logicians (Prawitz, 1971), as pointed out by Mann (1975).
 
 There is still another connection of cartesian closed categories to logic.
 This is via the language of {\em typed $\l$-calculus}. Although older than category
@@ -473,11 +476,14 @@ consists of types, terms and equations (between terms of the same type).
 \noindent
 (b) {\bf Terms}: (We write ``$t \in A''$ to say that $t$ is a term of type $A$.)
 \begin{enumerate}[label=(b\theenumi)]
-\item There are countably many variables of each type, say $x^{A}_{i} \in A$ if $i \in \nat$.
+\item There are countably many variables of each type,
+say $x^{A}_{i} \in A$ if $i \in \nat$.
 \item $\star \in \one$.
-\item If $a \in A$, $b \in B$ and $c \in A \times B$, then $\la a,b \ra \in A \times B$, $\prAB(c) \in A$ and $\prpAB(c) \in B$.
+\item If $a \in A$, $b \in B$ and $c \in A \times B$, then 
+$\la a,b \ra \in A \times B$, $\prAB(c) \in A$ and $\prpAB(c) \in B$.
 \item If $f \in \fexpBA$ and $a \in A$ then $\evBA(f,a) \in B$.
-\item If $x$ is a variable of type $A$ and $\phi(x) \in B$ then $\lxa{\varphi(x)} \in \fexpBA$.
+\item If $x$ is a variable of type $A$ and $\phi(x) \in B$
+then $\lxa{\varphi(x)} \in \fexpBA$.
 \end{enumerate}
 \noindent
 We often abbreviate $\evBA(f,a)$ as $f \app a$ when the type subscripts are clear
@@ -1021,8 +1027,8 @@ assigns to each object $A$ the set of its subobjects. There are several ways
 of making this more precise; we prefer the following: there is given an arrow
 $\tau: 1 \to \OM$ such that
 \begin{enumerate}
-\item[(i)] For every arrow h: $A \to \OM$ an equalizer of $h$ and $\tau\, 0_A: A \to 1 \to \OM$
-exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of h),
+\item[(i)] For every arrow $h: A \to \OM$ an equalizer of $h$ and $\tau\, 0_A: A \to 1 \to \OM$
+exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of $h$),
 \item[(ii)] For every monomorphism $m: B \to A$ there is a unique characteristic
 morphism $\cha m: A \to \OM$ such that
 \[
@@ -1037,18 +1043,18 @@ more generally, any Grothendieck topos (Johnstone, 1977).
 
 One simplification in Definition 4.1, first observed by Mikkelsen, is of
 importance to us. Instead of requiring arbitrary exponents $\fexpBA$  one need only
-require $PA \cong \fexp{\OM}{A}$ and its associated structure.
+require $\PA \cong \fexp{\OM}{A}$ and its associated structure.
 More precisely, we postulate a power ~ structure $(P,\ev,\star)$: 
-for each object A there is an object PA, an arrow $\ev_A : PA \times A\to \OM$
+for each object $A$ there is an object $\PA$, an arrow $\ev_A : \PA \times A\to \OM$
 and an arrow forming operation
 \[
-\inferrule{h: B \times A \to \OM}{h^*: B \to PA}
+\inferrule{h: B \times A \to \OM}{h^*: B \to \PA}
 \]
 such that (subscripts being omitted)
 \[
 \ev\la h^* \pi,\pi'\ra \doteq h, (\ev\la k \pi,\pi'\ra)^* \doteq k 
 \]
-for all $h: B\times A \to \OM$ and $k: B \to PA$.
+for all $h: B\times A \to \OM$ and $k: B \to \PA$.
 
 While in the category $\Set$ the subsets of a given set form a Boolean
 algebra, in an arbitrary topos the subobjects of a given object $A$ form a
@@ -1057,6 +1063,49 @@ interpretation of intuitionistic propositional logic in any topos, which can be
 extended to higher order intuitionistic logic, which may be regarded as a
 variant of set theory.
 
+\begin{defn}
+An {\em intuitionistic type theory} is a formal theory consisting of
+types, terms and an entailment relation as follows.
+\begin{enumerate}
+\item[(a)] {\bf Types}. $1$, $N$ and $0$ are types and, if $A$ and $B$ are types, so
+are $A \times B$ and $\PA$.
+\item[(b)] {\bf Terms}. There are countably many variables of each type; other basic
+terms and term forming operations are specified by the following chart, in
+which terms are listed under their types:
+\begin{center}
+\begin{tabular}{ c c c c c }
+$1$ & $N$ & $\OM$ & $A \times B$ & $\PA$\\
+\hline
+$\star$ & $0$ & $a = a'$ & $\la a,b \ra$& $\{x \in A | \pf (x)\}$\\
+&$S n$&$a \in \alpha$\\
+\end{tabular}
+\end{center}
+\medskip
+Here $n$ is a term of type $N$, $a$ and $a'$ are terms of type $A$, $b$ is a term
+of type $B$, $\alpha$ is a term of type $PA$ and $\pf(x)$ is a term of type $\OM$
+possibly containing a free variable $x$ of type $A$.
+
+Terms of type $\OM$ are usually called {\em formulas}. The usual logical symbols
+are introduced by definitions:
+\begin{align*}
+\tau &\equiv \star = \star,\\
+p \sland q &\equiv \la p,q \ra = \la \tau, \tau\ra,\\
+p \impl q &\equiv p \sland q = p,\\
+\forall_{x \in A} \pf(x) &\equiv \{ x \in A | \pf(x)\} = \{x \in A | \tau\}\\
+\intertext{The symbols $\bot$, $\wedge$ and $\exists$ may be defined in terms of the above (Prawitz,
+1965); also}%
+\neg p &\equiv p \impl \bot .
+\end{align*}
+\item[(b)] {\bf Entailment}. We introduce an entailment relation $p_1, \dots, p_n \ent_X q$
+between formulas whose free variables are all contained in $X = \{x_1, \dots, x_n\}$
+This must satisfy the obvious structural rules, sufficiently many logical
+rules to yield the usual intuitionistic predicate calculus, together with
+comprehension, extensionality, products and Peano's axioms (see [LS1,LS2]).
+
+The reason for the subscript $X$ on $\ent_X$ as in typed $\l$-calculus, is the
+possibility of ``empty'' types. For example, we may infer:
+\end{enumerate}
+\end{defn}
 
 
 
