--- a/lambek-1984/lambek-1984-cmr.tex
+++ b/lambek-1984/lambek-1984-cmr.tex
@@ -1,6 +1,8 @@
 %!TEX TS-program = pdflatex
 
 \documentclass[12pt]{article}
+\usepackage{mlmodern}
+\usepackage[T1]{fontenc}
 
 \usepackage[leqno]{amsmath}
 \usepackage{amssymb}
