--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1102,7 +1102,7 @@ This must satisfy the obvious structural rules, sufficiently many logical
 rules to yield the usual intuitionistic predicate calculus, together with
 comprehension, extensionality, products and Peano's axioms (see [LS1,LS2]).
 
-The reason for the subscript $X$ on $\ent_X$ as in typed $\l$-calculus, is the
+The reason for the subscript $X$ on $\ent_X$, as in typed $\l$-calculus, is the
 possibility of ``empty'' types. For example, we may infer:
 \end{enumerate}
 \end{defn}
