--- a/lambek-1984/lambek-1984-pal.tex
+++ b/lambek-1984/lambek-1984-pal.tex
@@ -7,10 +7,12 @@
 %\usepackage[full]{textcomp}
 %\usepackage[osf]{XCharter}% lining figures in math, osf in text
 %\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
-\usepackage[cal=cm,scr=esstix]{mathalpha}
-\usepackage{eulervm}
 \usepackage[leqno]{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
+%\usepackage{newpx}
+\usepackage[cal=cm,scr=esstix]{mathalpha}
+\usepackage{eulervm}
 
 \def\beginhook{}
 
