--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1032,7 +1032,7 @@ exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of $h$),
 \item[(ii)] For every monomorphism $m: B \to A$ there is a unique characteristic
 morphism $\cha m: A \to \OM$ such that
 \[
-\cha(\ker h) \doteq h, \quad ker(\cha m) \cong m.
+\cha(\ker h) \doteq h, \quad \ker(\cha m) \cong m.
 \]
 \end{enumerate}
 \end{defn}
@@ -1152,5 +1152,16 @@ which, by functional completeness of cartesian closed categories, is the
 unique arrow $f: 1\to \PA$ in $\TC[x]$ such that $x \in f \eqxx \pf(x)$
 in $\TC[X,x]$. Here $X$ comprises all variables other than $x$ which happen to be free in
 $\pf(x)$.
+
+Finally, entailment $p_1,\dots ,p_m \ent_X q$ in $L(\LC)$ is defined as follows. To
+simplify matters, take $m=1$ and $X = \{x\}$, $x$ a variable of type $A$. Then
+$\pf(x) \ent_X \psi(x)$ means:
+\begin{quote}
+For all objects $C$ and all arrows $a: C\to A$, if $fa \doteq \tau 0_C$
+then $ga \doteq \tau 0_C$.
+\end{quote}
+Here we have used functional completeness to write $\pf(x) \eqdx fx$ and
+$\psi(x) \eqdx gx$ with $f,g: A \to \OM$.
 \end{example}
 
+The description of $L(\LC)$ is now complete. 
