--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1028,7 +1028,13 @@ of making this more precise; we prefer the following: there is given an arrow
 $\tau: 1 \to \OM$ such that
 \begin{enumerate}
 \item[(i)] For every arrow $h: A \to \OM$ an equalizer of $h$ and $\tau\, 0_A: A \to 1 \to \OM$
-exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of $h$),
+exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of $h$),%
+\footnote{In their book Lambek and Scott add this: We define
+$\Ker h \equiv \{ x \in A \mid \la x, \top \ra \in |h|\}$, and
+$|\ker h| \equiv \{\la x,x \ra \in A \times A \mid \la x, \top \ra \in |h|\}$ where
+$|h|$ is the graph of the morphism $h$. This is kind what you would expect but
+even in their book they only make this clear in a later discussion, and apparently
+no one else on the entire Internet ever uses this concept in this context.}
 \item[(ii)] For every monomorphism $m: B \to A$ there is a unique characteristic
 morphism $\cha m: A \to \OM$ such that
 \[
@@ -1076,7 +1082,7 @@ which terms are listed under their types:
 \begin{tabular}{ c c c c c }
 $1$ & $N$ & $\OM$ & $A \times B$ & $\PA$\\
 \hline
-$\star$ & $0$ & $a = a'$ & $\la a,b \ra$& $\{x \in A | \pf (x)\}$\\
+$\star$ & $0$ & $a = a'$ & $\la a,b \ra$& $\{x \in A \mid \pf (x)\}$\\
 &$S n$&$a \in \alpha$\\
 \end{tabular}
 \end{center}
@@ -1091,7 +1097,7 @@ are introduced by definitions:
 \tau &\equiv \star = \star,\\
 p \sland q &\equiv \la p,q \ra = \la \tau, \tau\ra,\\
 p \impl q &\equiv p \sland q = p,\\
-\forall_{x \in A} \pf(x) &\equiv \{ x \in A | \pf(x)\} = \{x \in A | \tau\}\\
+\forall_{x \in A} \pf(x) &\equiv \{ x \in A \mid \pf(x)\} = \{x \in A \mid \tau\}\\
 \intertext{The symbols $\bot$, $\wedge$ and $\exists$ may be defined in terms of the above (Prawitz,
 1965); also}%
 \neg p &\equiv p \impl \bot .
@@ -1146,7 +1152,7 @@ S_n &\equiv 1 \xto{n} N \xto{S} N\\
 a = a' &\equiv  1 \xto{\la a,a' \ra} A \times A \xto{\delta_A} \OM\\
 & \qquad \text{ where } \delta_A = \cha\la 1_A,1_A\ra\\
 a\in \alpha &\equiv 1 \xto{\la \alpha,a\ra} \PA \times A \xto{\ev_A} \OM\\
-\{x \in A | \pf(x)\} &\equiv \lxa \pf(x)
+\{x \in A \mid \pf(x)\} &\equiv \lxa \pf(x)
 \end{align*}
 which, by functional completeness of cartesian closed categories, is the
 unique arrow $f: 1\to \PA$ in $\TC[x]$ such that $x \in f \eqxx \pf(x)$
@@ -1157,8 +1163,8 @@ Finally, entailment $p_1,\dots ,p_m \ent_X q$ in $L(\LC)$ is defined as follows.
 simplify matters, take $m=1$ and $X = \{x\}$, $x$ a variable of type $A$. Then
 $\pf(x) \ent_X \psi(x)$ means:
 \begin{quote}
-For all objects $C$ and all arrows $a: C\to A$, if $fa \doteq \tau 0_C$
-then $ga \doteq \tau 0_C$.
+For all objects $C$ and all arrows $a: C\to A$, if $fa \doteq \tau\, 0_C$
+then $ga \doteq \tau\, 0_C$.
 \end{quote}
 Here we have used functional completeness to write $\pf(x) \eqdx fx$ and
 $\psi(x) \eqdx gx$ with $f,g: A \to \OM$.
