--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1029,12 +1029,12 @@ $\tau: 1 \to \OM$ such that
 \begin{enumerate}
 \item[(i)] For every arrow $h: A \to \OM$ an equalizer of $h$ and $\tau\, 0_A: A \to 1 \to \OM$
 exists, denoted by $\ker h: \Ker h \to A$ (the {\em kernel} of $h$),%
-\footnote{In their book Lambek and Scott add this: We define
-$\Ker h \equiv \{ x \in A \mid \la x, \top \ra \in |h|\}$, and
-$|\ker h| \equiv \{\la x,x \ra \in A \times A \mid \la x, \top \ra \in |h|\}$ where
-$|h|$ is the graph of the morphism $h$. This is kind what you would expect but
-even in their book they only make this clear in a later discussion, and apparently
-no one else on the entire Internet ever uses this concept in this context.}
+\footnote{This definition is very mysterious. First the arrow mentioned is not unique,
+so it should be {\em a} kernel, not {\em the} kernel. Second, we never see a definition
+of what $\Ker h$ is, although one guesses that it's the collection of things that $h$ maps
+to some initial object in the category (e.g. "zero"). In their book Lambek and Scott use such
+a definition in a later proof related to a specific topos. 
+But it's never made more clear in this definition.}
 \item[(ii)] For every monomorphism $m: B \to A$ there is a unique characteristic
 morphism $\cha m: A \to \OM$ such that
 \[
@@ -1091,13 +1091,15 @@ Here $n$ is a term of type $N$, $a$ and $a'$ are terms of type $A$, $b$ is a ter
 of type $B$, $\alpha$ is a term of type $PA$ and $\pf(x)$ is a term of type $\OM$
 possibly containing a free variable $x$ of type $A$.
 
-Terms of type $\OM$ are usually called {\em formulas}. The usual logical symbols
+Terms of type $\OM$ are usually called {\em formulas}. The usual logical symbols%
+\footnote{Here they mean $\top$, $\sland$, $\impl$ and $\forall$. This is clarified in the book
+so I brought it over.}
 are introduced by definitions:
 \begin{align*}
-\tau &\equiv \star = \star,\\
-p \sland q &\equiv \la p,q \ra = \la \tau, \tau\ra,\\
+\top &\equiv \star = \star,\\
+p \sland q &\equiv \la p,q \ra = \la \top, \top\ra,\\
 p \impl q &\equiv p \sland q = p,\\
-\forall_{x \in A} \pf(x) &\equiv \{ x \in A \mid \pf(x)\} = \{x \in A \mid \tau\}\\
+\forall_{x \in A} \pf(x) &\equiv \{ x \in A \mid \pf(x)\} = \{x \in A \mid \top\}\\
 \intertext{The symbols $\bot$, $\wedge$ and $\exists$ may be defined in terms of the above (Prawitz,
 1965); also}%
 \neg p &\equiv p \impl \bot .
