--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -77,6 +77,7 @@ pdfencoding=auto, psdextra
 \def\xto#1{\xrightarrow{\kern.6em #1 \kern.6em}}
 \def\sxto#1{\xrightarrow{\kern.3em #1 \kern.3em}}
 \def\ent{\vdash}
+\def\entt{\Vdash}
 \def\imp{\shortrightarrow}
 \def\iff{\leftrightarrow}
 \def\from{\Leftarrow}
@@ -1162,7 +1163,7 @@ unique arrow $f: 1\to \PA$ in $\TC[x]$ such that $x \in f \eqxx \pf(x)$
 in $\TC[X,x]$. Here $X$ comprises all variables other than $x$ which happen to be free in
 $\pf(x)$.
 
-Finally, entailment $p_1,\dots ,p_m \ent_X q$ in $L(\LC)$ is defined as follows. To
+Finally, entailment $p_1,\dots ,p_m \ent_X q$ in $L(\TC)$ is defined as follows. To
 simplify matters, take $m=1$ and $X = \{x\}$, $x$ a variable of type $A$. Then
 $\pf(x) \ent_X \psi(x)$ means:
 \begin{quote}
@@ -1173,4 +1174,48 @@ Here we have used functional completeness to write $\pf(x) \eqdx fx$ and
 $\psi(x) \eqdx gx$ with $f,g: A \to \OM$.
 \end{example}
 
-The description of $L(\LC)$ is now complete. 
+The description of $L(\TC)$ is now complete.
+The definition of $\ent_X$ in $L(\TC)$ is the crux of the
+so-called Beth-Kripke-Joyal semantics of a topos, which
+views arrows $a: C \to A$ as ``elements of A at stage C.''
+We shall not pursue this theme
+any further here. Instead, we point out that the internal
+language of a topos allows us to work in $\LC$ as we would in $\Set$, provided
+we use only intuitionistic logic. The following dictionary shows how a few
+external statements about $\LC$ are translated into the internal language.
+If $p$ is a closed formula in $L(\TC)$, that is, an arrow $p: 1 \to \OM$
+in $\LC$, it is customary to write $p \doteq \top$ in $\LC$ as
+$\LC \entt p$ and read this as ``$\LC$ satisfies $p$'' or
+``$p$ holds in $\LC$.''
+
+\begin{center}
+\begin{tabular}{ l | l }
+\multicolumn{1}{c}{In $\TC$} & \multicolumn{1}{c}{In $L(\TC)$} \\
+ \hline
+ $f \doteq g : A \rightrightarrows B$ & $\TC \entt \forall_{x\in A}\, fx = gx$ \\
+ $f: A \to B$ is mono & $\TC \entt \forall_{x\in A}\, \forall_{x'\in A}\, fx = fx' \impl x = x'$\\
+ $f: A \to B$ is epi & $\TC \entt \forall_{y\in B}\, \exists_{x\in A}\, fx = y$\\
+ $P$ is projective & \begin{minipage}[t]{50mm}
+for all formulas $\pf(z,x)$, if $\TC \entt \forall_{z\in P}\,\exists_{x \in A}\, \pf(z,x)$
+then $\TC \entt \forall_{z\in P}\, \pf(z,fz)$
+for some $f : P \to A$.
+\end{minipage}\\[3.5em]
+$\OM = 1 + 1$ & $\TC \entt \forall_{t\in \OM} (t \wedge \neg t)$\\
+ \hline
+\end{tabular}
+\end{center}
+\medskip
+Some historical remarks are in order. The internal logic of a topos is
+implicit in Lawvere's definition of the logical connectives in any topos
+(1972). As a formal language it first appears explicitly in the article by
+Mitchell (1972), having also served as a working language in the Paris seminar
+of B\'enabou (see. Coste, 1972-4). It was probably discovered independently by
+many people; the first detailed exposition appears in a paper by Osius (1975),
+see also Fourman (1974) and Boileau (1975).
+
+Finally, topos semantics includes as special cases Beth and Kripke models,
+forcing in model theory and set theory and some versions of realizability.
+
+
+
+
