--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1177,16 +1177,16 @@ $\psi(x) \eqdx gx$ with $f,g: A \to \OM$.
 The description of $L(\TC)$ is now complete.
 The definition of $\ent_X$ in $L(\TC)$ is the crux of the
 so-called Beth-Kripke-Joyal semantics of a topos, which
-views arrows $a: C \to A$ as ``elements of A at stage C.''
+views arrows $a: C \to A$ as ``elements of $A$ at stage $C$.''
 We shall not pursue this theme
 any further here. Instead, we point out that the internal
-language of a topos allows us to work in $\LC$ as we would in $\Set$, provided
+language of a topos allows us to work in $\TC$ as we would in $\Set$, provided
 we use only intuitionistic logic. The following dictionary shows how a few
-external statements about $\LC$ are translated into the internal language.
+external statements about $\TC$ are translated into the internal language.
 If $p$ is a closed formula in $L(\TC)$, that is, an arrow $p: 1 \to \OM$
-in $\LC$, it is customary to write $p \doteq \top$ in $\LC$ as
-$\LC \entt p$ and read this as ``$\LC$ satisfies $p$'' or
-``$p$ holds in $\LC$.''
+in $\TC$, it is customary to write $p \doteq \top$ in $\TC$ as
+$\TC \entt p$ and read this as ``$\TC$ satisfies $p$'' or
+``$p$ holds in $\TC$.''
 
 \begin{center}
 \begin{tabular}{ l | l }
