--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1282,7 +1282,7 @@ canonical subobjects, to one of the authors [L4]. In both these articles type
 theories were disguised as cartesian categories with additional equational
 structure.
 
-How close are we to having an equivalence between $\Lang$ and $Top_0$? Even
+How close are we to having an equivalence between $\Lang$ and $\Top_0$? Even
 if we ignore the technical point that Proposition 5.1 yields an equivalence
 rather than an isomorphism, the best we can say about the adjunction
 $\LC \to LT(\LC)$ for an arbitrary type theory $\LC$ is that it is a conservative
