--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1241,7 +1241,7 @@ is (the name of) a {\em provably functional relation},
 that is, a closed term of type
 $P(A \times B)$ such that in $\LC$ we can prove:
 \begin{enumerate}
-\item[(1)] $\ent_{\!\rho} \subseteq \alpha \times \beta$
+\item[(1)] $\ent {\!\rho} \subseteq \alpha \times \beta$
 \item[(2)] $\ent\! \forall_{x \in A} (x \in \alpha \impl \exists!_{y \in B} \la x,y \ra \in \rho)$
 \end{enumerate}
 So far we have only got a category $T(\LC)$, but it is easily endowed with the
