--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -109,6 +109,7 @@ pdfencoding=auto, psdextra
 \def\LC{{\mathcal L}}
 \def\MC{{\mathcal M}}
 \def\TC{{\mathcal T}}
+\def\FC{{\mathcal F}}
 \def\l{\lambda}
 \def\lamC{\l\text{-{\bf{\kern 0.2pt}calc}}}
 \def\lx{\lambda_x}
@@ -1291,9 +1292,21 @@ definition of type theory more restrictive or by relaxing the notion of
 translation. However, it appears that the adjointness asserted by Theorem 5.2
 suffices for many useful applications, some of which we shall now discuss.
 
+\section*{Application 5.3.}
 
-
-
-
-
+If $\LC_0$ is pure type theory (see Example 4.3), it
+follows from Theorem 5.2 that $\FC \equiv T(\LC_0)$ is an initial object
+in $\Top_0$ , which has come to be known as the {\em free topos}· 
+One could argue that $\FC$ is the universe of mathematics for a moderate
+intuitionist or constructivist. The terminal object of $\FC$ has the important 
+algebraic properties of being indecomposable and projective. As first observed 
+by Peter Freyd (1978), these translate into the following meta-theorems
+about pure type theory, which are basic to the philosophy of intuitionism:
+\begin{enumerate}
+\item[(i)] if $\ent p \wedge q$ then either $\ent p$ or $\ent q$
+\item[(ii)] if $\ent \exists_{x\in A} \pf(x)$ then $\ent \pf(x)$ 
+for some closed term $a$ of type $A$.
+\end{enumerate}
+These results may be proved either algebraically, as Freyd would have it,
+or linguistically [LS1,LS5].
 
