--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -166,7 +166,7 @@ pdfencoding=auto, psdextra
 \newcommand{\Top}{\fcat{Top}}
 \newcommand{\Lang}{\fcat{Lang}}
 \newcommand{\grph}{\fcat{Grph}}
-
+\newcommand{\Spec}{\fcat{Spec}}
 \DeclareMathOperator{\Hom}{{Hom}}
 
 \newcommand{\iso}{\cong}                % Isomorphism
@@ -1105,7 +1105,7 @@ are introduced by definitions:
 p \sland q &\equiv \la p,q \ra = \la \top, \top\ra,\\
 p \impl q &\equiv p \sland q = p,\\
 \forall_{x \in A} \pf(x) &\equiv \{ x \in A \mid \pf(x)\} = \{x \in A \mid \top\}\\
-\intertext{The symbols $\bot$, $\wedge$ and $\exists$ may be defined in terms of the above (Prawitz,
+\intertext{The symbols $\bot$, $\vee$ and $\exists$ may be defined in terms of the above (Prawitz,
 1965); also}%
 \neg p &\equiv p \impl \bot .
 \end{align*}
@@ -1203,7 +1203,7 @@ for all formulas $\pf(z,x)$, if $\TC \entt \forall_{z\in P}\,\exists_{x \in A}\,
 then $\TC \entt \forall_{z\in P}\, \pf(z,fz)$
 for some $f : P \to A$.
 \end{minipage}\\[3.5em]
-$\OM = 1 + 1$ & $\TC \entt \forall_{t\in \OM} (t \wedge \neg t)$\\
+$\OM = 1 + 1$ & $\TC \entt \forall_{t\in \OM} (t \vee \neg t)$\\
  \hline
 \end{tabular}
 \end{center}
@@ -1303,7 +1303,7 @@ algebraic properties of being indecomposable and projective. As first observed
 by Peter Freyd (1978), these translate into the following meta-theorems
 about pure type theory, which are basic to the philosophy of intuitionism:
 \begin{enumerate}
-\item[(i)] if $\ent p \wedge q$ then either $\ent p$ or $\ent q$
+\item[(i)] if $\ent p \vee q$ then either $\ent p$ or $\ent q$
 \item[(ii)] if $\ent \exists_{x\in A} \pf(x)$ then $\ent \pf(x)$ 
 for some closed term $a$ of type $A$.
 \end{enumerate}
@@ -1345,6 +1345,62 @@ which gives rise in $\LC_0$ to Troelstra's uniformity principle (1970):
 Similarly, for certain arrows $\underline{p} : 1 \to \OM$ in $\FC$ coming
 from closed formulas $p$ of $\LC_0$, $\Ker \underline{p}$ is projective in $\FC$,
 and this translates into what logicians call ``independence of premises''.
+
+\section*{Application 5.6.}
+
+If $F$ is a filter of closed formulas in a type theory
+$\LC$, one may form a new type theory $\LC/F$ in which the formulas of $F$ are
+assumed or postulated. In particular, if $F$ is a filter of arrows $1 \to \OM$
+in a topos $\TC$ we may define
+\[
+\TC\!/F = T(L(\TC)/F) .
+\]
+Dividing a topos by a filter is very much like dividing a ring by an ideal.
+
+Since the intersection of prime filters $P$	is $\{\top\}$, it follows that
+every topos is a subdirect product of toposes of the form $\TC/P$. This is the
+crux of Henkin's completeness theorem for higher order logic with choice (see
+below). Actually, much more is true: the prime filters of the Heyting
+algebra $\Hom(1, \OM)$ are the points of a topological 
+space $\mathop{\Spec}\TC$, the toposes $\TC/P$ are the stalks of a 
+sheaf on $\mathop{\Spec}\TC$ and the topos $\TC$ may be recaptured
+from the global sections of this sheaf [LM]. Not surprisingly, a crucial step
+in the proof of this result is the following theorem of intuitionistic type
+theory called {\em definition by cases}: if $p_1, \dots, p_n$ are closed formulas
+and $a_1, \dots, a_n$ are closed terms of type $A$, then
+\[
+\bigvee_{i=1}^n p_i,\, \bigwedge_{i,j=1}^n ((p_i \sland p_j) \impl a_i = a_j) \ent
+\exists!_{x \in A} \bigwedge_{i=1}^n (p_i \impl x = a_i).
+\]
+
+\section*{Application 5.7.} 
+
+By an interpretation of a type theory $\LC$ we mean a
+translation $\tau:\LC \to L(\TC)$ where $\TC$ is a topos, which we may as well assume to
+have canonical subobjects. By Theorem 5.2, this corresponds to a morphism
+$T(\LC) \to \TC$ in $\Top_0$. The same theorem tells us that the category of inter-
+pretations of $\LC$ has an initial object $\LC \to LT(\LC)$, the adjunction pertaining
+to the pair of adjoint functors $(T,L)$. We shall now concentrate on toposes
+which resemble the topos of sets.
+
+We call an interpretation $\tau:\LC \to L(\TC)$ a {\em model} of $\LC$
+if the terminal object of $\LC$ is an indecomposable projective. The completeness
+theorem for higher order logic asserts that every type theory has enough models. This
+means, for every closed formula $p$ of $\LC$, if $\TC \ent \tau(p)$ for all
+models $\tau:\LC \to L(\TC)$, then $\ent p$ in $\LC$. For classical type theory 
+this is due to Henkin (1950), while for intuitionistic theories we learned 
+it from Aczel (1969).
+If $\LC$ satisfies the rule of choice, the completeness theorem is nothing else
+than the subdirect product representation of $T(\LC)$ mentioned in
+Application 5.6 and one finds that the models are Henkin's nonstandard models.
+
+This ends our discussion of higher order categorical logic. We regret
+that space does not permit introducing further topics, e.g., recursive
+functions. We feel that many connections between category theory and logic
+still wait to be discovered.
+
+
+
 
 
 
