--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1375,7 +1375,7 @@ and $a_1, \dots, a_n$ are closed terms of type $A$, then
 
 \section*{Application 5.7.} 
 
-By an interpretation of a type theory $\LC$ we mean a
+By an {\em interpretation} of a type theory $\LC$ we mean a
 translation $\tau:\LC \to L(\TC)$ where $\TC$ is a topos, which we may as well assume to
 have canonical subobjects. By Theorem 5.2, this corresponds to a morphism
 $T(\LC) \to \TC$ in $\Top_0$. The same theorem tells us that the category of inter-
