--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -1406,7 +1406,7 @@ still wait to be discovered.
 
 \begin{enumerate}[leftmargin=*, widest=8888, align=left]
 
-\item[] P. H. Aczel, Saturated intuitionistic theories; in: H. A. Schmidt, K. Schutte,
+\item[] P. H. Aczel, Saturated intuitionistic theories, in: H. A. Schmidt, K. Schutte,
 H.-J. Thiele, {\em Contributions to mathematical logic}, (North-Holland,
 Amsterdam, 1969), pp. 1-11.
 
@@ -1439,7 +1439,7 @@ Logic (North-Holland, Amsterdam, 1977).
 categories}, Manuscript 1978.
 
 \item[] K. G\"odel, {\em \"Uber formal unentscheidbare Satze der Principia Mathematica und
-verwandter Systeme I}, Monatshefte f\"ur Math. und Physik 38 (1931, 173-198;
+verwandter Systeme I}, Monatshefte f\"ur Math. und Physik 38 (1931, 173-198,
 English translation in: J. van Heijenoort, {\em From Frege to G\"odel}
 (Harvard University Press, Cambridge, MA, 1967).
 
@@ -1447,7 +1447,7 @@ English translation in: J. van Heijenoort, {\em From Frege to G\"odel}
 Standpunktes}, Dialectica 12 (1958)
 
 \item[] L. Henkin, {\em Completeness in the theory of types}, J. Symbolic Logic 15 (1950),
-81-91; reprinted in: J. Hintikka, The Philosophy of Mathematics
+81-91, reprinted in: J. Hintikka, The Philosophy of Mathematics
 (Oxford University Press, Oxford, 1969).
 
 \item[] J. R. Hindley, B. Lercher and J. P. Seldin, {\em Combinatory Logic} (Cambridge
@@ -1455,7 +1455,7 @@ University Press, Cambridge, 1972).
 
 \item[] P. T. Johnstone, {\em Topos theory} (Academic Press, London, 1977).
 
-\item[] A. Kock and G. E. Reyes, {\em Doctrines in categorical logic}; in: J. Barwise,
+\item[] A. Kock and G. E. Reyes, {\em Doctrines in categorical logic}, in: J. Barwise,
 {\em Handbook of Mathematical Logic} (North-Holland, Amsterdam, 1977).
 
 \item[{[L1]}] J. Lambek, {\em Deductive systems and categories, I, II, III}, J. Math.
@@ -1466,7 +1466,7 @@ Mathematics 274 (1972), 57-82.
 \item[{[L2]}] J. Lambek, {\em Functional completeness of cartesian categories}, Ann. Math.
 Logic 6 (1974), 259-292.
 
-\item[{[L3]}] J. Lambek, {\em From $\l$-calculus to Cartesian closed categories}; in: J. P.
+\item[{[L3]}] J. Lambek, {\em From $\l$-calculus to Cartesian closed categories}, in: J. P.
 Seldin and J. R. Hindley, {\em To H. B. Curry, Essays in combinatory
 logic, lambda calculus and formalism} (Academic Press, London,
 1980), pp. 375-402.
@@ -1500,6 +1500,88 @@ Constructive Mathematics, Springer Lecture Notes in Math. 873
 \item[{[LS6]}] J. Lambek and P. J. Scott, {\em Introduction to higher order categorical logic}, Cambridge
 University Press.
 
+\item[] F. W. Lawvere, {\em An elementary theory of the category of sets}, Proc. Nat.
+Acad. Sci, USA 52 (1964), 1506-1511.
+
+\item[] F. W. Lawvere, {\em Adjointness in foundations}, Dialectica 23 (1969), 281-296.
+
+\item[] F. W. Lawvere, {\em Quantifiers and sheaves}, in: Actes du Congr\`es International des
+Mathematici\'ens, Nice 1970, vol. 1 (Gauthier-Villars, Paris, 1971),
+pp. 329-334.
+
+\item[] F. W. Lawvere, {\em Equality in hyperdoctrines and comprehension schema as an adjoint
+functor}, Proc. Amer. Math. Soc, Applications of categorical algebra
+(1970)' 1-14.
+
+\item[] F. W. Lawvere, {\em Introduction}, in: Toposes, Algebraic Geometry and Logic,
+Springer Lecture Notes in Math. 274 (1972), 1-12.
+
+\item[] S. MacLane, {\em Categories for the working mathematician}, (Springer, New York,
+1971).
+
+\item[] M. Makkai and G. E. Reyes, {\em First order categorical logic}, Springer Lecture
+Notes in Math. 611 (1977).
+
+\item[] C. R. Mann, {\em The connection between equivalence of proofs and cartesian closed
+categories}, Proc. London Math. Soc, 31 (1975), 289-310.
+
+\item[] P. Martin-L\"of, {\em An intuitionistic theory of types: predicative part}, in:
+H. E. Rose and J. C. Shepherdson, Logic Colloquium 1 73 (North-Holland,
+Amsterdam, 1974), pp. 73-118.
+
+\item[] W. Mitchell, {\em Boolean topoi and the theory of sets}, J. Pure and Applied Algebra
+2 (1972), 261-274.
+
+\item[] G. Osius, {\em Logical and set theoretical tools in elementary topoi}, Springer
+Lecture Notes in Math. 445 (1975), 297-346.
+
+\item[] D. Prawitz, {\em Natural deduction} (Almqvist and Wiskell, Stockholm, 1965).
+
+\item[] D. Prawitz, {\em Ideas and results in proof theory}, in: J. E. Fenstad, Proc, Second
+Scandinavian Logic Symposium (North-Holland, Amsterdam, 1971),
+pp. 235-307.
+
+\item[] A. Robinson, {\em Non-standard analysis} (North-Holland, Amsterdam, 1966).
+
+\item[] B. Russell and A. N. Whitehead, {\em Principia Mathematica I-III} (Cambridge
+University Press, Cambridge, 1910-1913).
+
+\item[] D. S. Scott, {\em Continuous lattices}, Springer Lecture Notes in Math. 274 (1972),
+97-136.
+
+\item[] D. S. Scott, {\em Data types as lattices}, SIAM J. Computing 5 (1976), 522-587.
+
+\item[] D. S. Scott, {\em Relating theories of the $\l$-calculus}, in: J. P. Seldin and J. R.
+Hindley, {\em To H. B. Curry, Eassays in combinatory logic, lambda calculus
+and foundations} (Academic Press, London, 1980), pp. 403-450.
+
+\item[{[S]}] P. J. Scott, {\em The ``Dialectica'' intepretation and categories}, Zeitschr.
+f. math. Logik and Grundlagen d. Math. 24 (1978), 553-575.
+
+\item[] R. Seely, {\em Locally cartesian closed categories and type theory}, Manuscript
+(1983).
+
+\item[] M. E. Szabo, {\em A categorical equivalence of proofs}, Notre Dame Journal of
+Formal Logic 15 (1974), 177-191.
+
+\item[] M. E. Szabo, {\em Algebra of proofs}, Studies in Logic and the foundations of
+Mathematica 88 (North-Holland, Amsterdam, 1978).
+
+\item[] W. W. Tait, {\em Intentional interpretation of functionals of finite type I, J}.
+Symbolic Logic 32 (1967), 198-212.
+
+\item[] M.F. Thibault, {\em Repr\'sentations des fonctions r\'ecursives dans les cat\'egories},
+Thesis (McGill University, Montreal, 1977).
+
+\item[] M.F. Thibault, {\em Prerecursive categories}, J. Pure and Applied Algebra 24 (1982), 79-93.
+
+\item[] A. S. Troelstra, {\em Metamathematical investigation of intuitionistic arithmetic
+and analysis}, Springer Lecture Notes in Math. 344 (1970).
+
+\item[] H. Volger, {\em Logical and semantical categories and topoi}, Springer Lecture
+Notes in Math. 445 (1975), 87-100.
+
+\item[] R. C. de Vrijer, {\em Strong normalization in $N - \HA_{p}^{\omega}$}, Manuscript 1982.
 \end{enumerate}
 
 
