--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -308,9 +308,9 @@ is summarized as follows:
 \renewcommand{\arraystretch}{1.5}
 
 \begin{center}
-\begin{tabular}{ c | c }
+\begin{tabular}{ l | l }
  \hline
-Logic & Algebra \\
+\multicolumn{1}{c|}{Logic} & \multicolumn{1}{c}{Algebra} \\
  \hline
  untyped $\l$-calculus & C-monoids \\
  typed $\l$-calculus & cartesian closed categories \\
@@ -329,7 +329,7 @@ Seely, has found another such comparison:
 \begin{center}
 \begin{tabular}{ c | c }
  \hline
-Logic & Algebra \\
+{Logic} & {Algebra} \\
  \hline
 Martin-L\"of type theory  & locally cartesian closed categories \\
  \hline
