--- a/lambek-1984/lambek-1984-cmr.tex
+++ b/lambek-1984/lambek-1984-cmr.tex
@@ -9,7 +9,7 @@
 \def\PA{\mathit{PA}}
 \def\PB{\mathit{PB}}
 \def\HA{\mathit{HA}}
-
+\def\intui{int{\kern-0.9pt}uitionistic}
 \def\beginhook{}
 
 \input lambek-main
