--- a/lambek-1984/lambek-main.tex
+++ b/lambek-1984/lambek-main.tex
@@ -655,24 +655,20 @@ most interesting result concerns the normal forms of polynomials in $\C[x]$.
 
 \begin{prop}
 ({\em functional completeness} of cartesian closed categories).
-For every polynomial $\pf(x): B \to C$%
+For every polynomial $\pf(x): B \to C$
 in $\C[x]$ in an indeterminate arrow
 $x: D \to A$ there is a unique arrow $f: \fexp{A}{D} \times B \to C$ in $\C$
 such that
 \[
 f\la (x\pi'_{B,D})^*, \one_B\ra \eqdx \pf(x)
-\footnote{Editor's note: This notation $\pf(x)$ is endlessly confusing to me.
-You want to think that $\pf$ maps $x \in B$ to something in $C$ 
-but that's not that is going on. What's going on is that the object
-$\pf(x)$ labeled by $x$ is something that maps
-things in $B$ to things in $C$. So really $\pf$ maps an arrow from
-$D$ to $A$ to an arrow from $B$ to $C$? That's the only way the notation
-makes sense to me.}
+\footnote{Editor's Note: Here $\pf(x)$ is notationally subtle. It names an arrow from $B \to C$.
+It confusingly looks like the normal notation for a mathematical function that maps $x$ to something
+in $C$. But it isn't.}
 \]
 \end{prop}
 
 An interesting alternative interpretation of this result is to think of
-$\C[x]$ as a deductive system with the indeterminat $x: D \to A$
+$\C[x]$ as a deductive system with the indeterminate $x: D \to A$
 considered as a {\em new assumption}. Then functional completeness is
 simply a form of the deduction theorem in logic,
 with something extra added at the end: to every proof
@@ -735,7 +731,7 @@ $\l$-calculus $\LC$ is defined as follows.
 Its objects are types of $\LC$. The arrows $A \to B$ in $C(\LC)$ are
 pairs $(x, \pf(x))$ where where x is a variable of type $A$ and $\pf(x)$ a term
 of type $B$ with no free variables but $x$ (Think of this as the
-function $x \mapsto \pf(X)$. We agree to identify $(x,\pf(x))$ with $(x', \psi(x'))$
+function $x \mapsto \pf(x)$. We agree to identify $(x,\pf(x))$ with $(x', \psi(x'))$
 if $\pf(x) \eqlx \psi(x)$ in $\LC$. The identity arrow $A \to A$ is of course $(x,x)$,
 and composition of arrows is given by substitution of polynomials. It is easily
 seen that $C(\LC)$ is a cartesian closed category. In particular, the rule
