--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -497,9 +497,7 @@ Peter Smith \cite{Smith} does this:
 
 \begin{lemma}[Yoneda]\label{yoneda-smith} For any locally small category $\CC$, object $X$
 in $\CC$, and covariant functor $F:\CC \to \Set$,  $\mathop{\shortNat}(\CC(X,-),F) \iso
-FX$, both naturally in $X$ and naturally in $F$.
-
-Likewise for any contravariant functor $F:\CC \to \Set$ (equivalently, covariant functor $F:\CC^\op \to \Set$),
+FX$, both naturally in $X$ and naturally in $F$. Likewise for any contravariant functor $F:\CC \to \Set$ (equivalently, covariant functor $F:\CC^\op \to \Set$),
 $\mathop{\shortNat}(\CC(-,X),F) \iso FX$, both naturally in A and naturally in F.
 \end{lemma}
 \noindent
@@ -518,9 +516,7 @@ Paolo Perrone \cite{Perrone} writes the dual version, and uses the standard term
  $$
  assigning to a natural transformation $\alpha:\Hom_\cat{C} (-,X)\fto F$ the element
  $\alpha_X(\id_X)\in FX$, which is the value of the component $\alpha_X$ of $\alpha$ on
- the identity at $X$. 
-
-This assignment is a bijection, and it is natural both in $X$ and in $F$.
+ the identity at $X$. This assignment is a bijection, and it is natural both in $X$ and in $F$.
 \end{lemma}
 \noindent
 Here he writes $\Hom_\CC$ for $\Arrows_\CC$ and $\Hom_{[\cat{C}^\op,\Set]}$ to mean the
